--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="math">Math</string>
     <string name="history">History</string>
     <string name="english">English</string>
+    <string name="comp">Computer Science</string>
+    <string name="art">Art</string>
+    <string name="music">Music</string>
     <string name="subjectQuestion">What subjects do you have homework for?</string>
 </resources>
